--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     }
 
     /* ปรับขนาดสำหรับหน้าจอขนาดเล็ก */
-    @media (max-width: 768px) {
+    @media (max-width: 768px) and (orientation: landscape) {
         .custom-tooltip {
             padding: 3px 8px; /* ลด Padding */
             font-size: 10px; /* ลดขนาดฟอนต์ */
@@ -321,7 +321,7 @@
         }
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 768px) and (orientation: landscape) {
         .tooltip-label {
             top: -20px;
             left: 50%;
