--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIAMTECH 360°</title>
+    <!-- นำเข้าฟอนต์ Kanit จาก Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -31,6 +33,7 @@
             color: #000;
             margin: 0 10px;
             font-size: 14px;
+            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
         .cta {
             background-color: #ffcc00;
@@ -39,6 +42,7 @@
             border-radius: 5px;
             text-decoration: none;
             font-weight: bold;
+            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
         .hero {
             background: #f0f0f0;
@@ -47,6 +51,7 @@
         .hero h1 {
             font-size: 48px;
             margin: 0;
+            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
         .hero button {
             margin-top: 20px;
@@ -57,6 +62,7 @@
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
         .footer {
             margin-top: 40px;
@@ -73,30 +79,33 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="logo.png" alt="SIAMTECH 360° Logo">
-            <span>SIAMTECH 360°</span>
+            <img src="https://static.wixstatic.com/media/892c97_3a35de5f48ea4285b5470696fb7d0677~mv2.png" alt="SIAMTECH 360° Logo">
         </div>
         <div class="nav-links">
             <a href="index.html">หน้าแรก</a>
             <a href="about.html">เกี่ยวกับ</a>
             <a href="360view">มุมมอง 360°</a>
-            <a href="#" class="cta">สมัครเลย</a>
+            <a href="https://siamtech.info/eEnrollment/index.jsp" class="cta">สมัครเลย</a>
         </div>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Welcome To<br>SIAMTECH 360°</h1>
-        <button onclick="alert('Redirecting to another page')">START</button>
+    <h1>Welcome To<br>SIAMTECH 360°</h1>
+    <button onclick="window.location.href='about.html'">START</button>
     </section>
 
     <!-- Footer Section -->
-    <footer class="footer">
+    <footer class="footer" style="font-family: 'Kanit', sans-serif; text-align: left;">
+        <div class="logo">
+            <img src="https://static.wixstatic.com/media/892c97_3a35de5f48ea4285b5470696fb7d0677~mv2.png" alt="SIAMTECH 360° Logo" style="height: 40px; margin-bottom: 10px;">
+        </div>
         <p>เราสร้างคนสู่โลกอนาคต</p>
         <p>วิทยาลัยเทคโนโลยีสยาม (สยามเทค)</p>
         <p>46/9 ถ.กรุงธนบุรี แขวงวัดท่าพระ เขตบางกอกใหญ่ กรุงเทพฯ 10600</p>
         <p>โทร. 02-8640358</p>
         <p>แฟกซ์. 02-412-9863</p>
-    </footer>
+
+</footer>
 </body>
 </html>
