--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         }
         .hero {
             background: #f0f0f0;
+            height: 80vh;
             padding: 100px 20px;
         }
         .hero h1 {
@@ -90,10 +91,12 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
-    <h1>Welcome To<br>SIAMTECH 360°</h1>
-    <button onclick="window.location.href='about.html'">START</button>
-    </section>
+<section class="hero" style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; height: 55vh;">
+    <h1 style="font-size: 64px; line-height: 0.8; text-align: left; margin-left: -37%;">Welcome To<br></h1>
+    <h1 style="font-size: 128px; line-height: 0.8;">SIAMTECH 360°<br></h1>
+        
+    <button style="margin-top: 70px;" onclick="window.location.href='about.html'">START</button>
+</section>
 
     <!-- Footer Section -->
     <footer class="footer" style="font-family: 'Kanit', sans-serif; text-align: left;">
