--- a/360view.html
+++ b/360view.html
@@ -320,7 +320,116 @@
         }
     }
 
+    /* ปรับขนาดสำหรับหน้าจอขนาดเล็กแนวนอน */
+    @media (max-width: 1920px)  {
+        .custom-tooltip {
+            padding: 3px 8px; /* ลด Padding */
+            font-size: 10px; /* ลดขนาดฟอนต์ */
+            border-radius: 3px; /* ลดความโค้งมน */
+        }
+
+        .custom-tooltip img {
+            width: 24px; /* เพิ่มขนาดไอคอนสำหรับมือถือ */
+            height: 24px; /* เพิ่มขนาดไอคอนสำหรับมือถือ */
+        }
+    }
+
     @media (max-width: 768px)  {
+        .tooltip-label {
+            top: -20px;
+            left: 50%;
+            padding: 3px 8px; /* ลด Padding */
+            font-size: 10px; /* ลดขนาดฟอนต์ */
+            border-radius: 3px; /* ลดความโค้งมน */
+        }
+
+        #videoOverlay {
+            width: 80%;
+        }
+
+        #videoOverlay iframe {
+            width: 100%; /* ให้ใหญ่ขึ้นสำหรับมือถือ */
+        }
+
+        #closeButton {
+            width: 20px;
+            height: 20px;
+        }
+
+        #closeButton::before {
+            font-size: 20px;
+        }
+
+        .popup-icon img {
+            width: 36px;
+            height: 36px;
+        }
+
+        .popup-icon {
+            top: 20px;
+            right: 20px;
+            width: 36px;
+            height: 36px;
+        }
+
+        .popup-icon:hover {
+            background-color: rgba(0, 0, 0, 0.301); /* สีพื้นหลังที่เปลี่ยนเมื่อ hover */
+            transform: scale(1.1); /* ขยายขนาดขึ้นเล็กน้อย */
+        }
+
+        .popup-window {
+            width: 60%;
+            max-width: 768px;
+            top: 210px;
+        }
+
+        .popup-buttons-container {
+            grid-template-columns: 1fr;
+        }
+
+        .popup-button {
+            font-size: 10px;
+            padding: 8px;
+            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
+        }
+
+        .custom-hotspot img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .custom-hotspot span {
+            font-size: 10px;
+            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
+        }
+
+        #closePopup {
+            width: 19px;
+            height: 19px;
+            font-size: 16px;
+            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
+        }
+
+        #menuButton {
+            width: 180px;
+        }
+
+        .menuBox {
+            width: 150px;
+            top: 80px; /* ตำแหน่งต่ำกว่า menuButton เล็กน้อย */
+            left: 50%; /* กึ่งกลางแนวนอน */
+        }
+
+        .menuItem {
+            font-size: 10px;
+            font-weight: 700; /* ฟอนต์หนา */
+        }
+
+        #closeMenu {
+            font-size: 16px;
+        }
+    }
+    @media (max-width: 1920px)  {
         .tooltip-label {
             top: -20px;
             left: 50%;
