--- a/360view.html
+++ b/360view.html
@@ -510,7 +510,7 @@
         }
 
         .menuBox {
-            width: 100px;
+            width: 70vw;
             top: 80px; /* ตำแหน่งต่ำกว่า menuButton เล็กน้อย */
             left: 50%; /* กึ่งกลางแนวนอน */
         }
