--- a/360view.html
+++ b/360view.html
@@ -473,9 +473,9 @@
         }
 
         .popup-window {
-            width: 60%;
+            width: 40%;
             max-width: 768px;
-            top: 210px;
+            top: 20px;
         }
 
         .popup-buttons-container {
@@ -510,7 +510,7 @@
         }
 
         .menuBox {
-            width: 70vw;
+            width: 180px;
             top: 20px; /* ตำแหน่งต่ำกว่า menuButton เล็กน้อย */
             left: 50%; /* กึ่งกลางแนวนอน */
         }
