--- a/360view.html
+++ b/360view.html
@@ -321,7 +321,7 @@
     }
 
     /* ปรับขนาดสำหรับหน้าจอขนาดเล็กแนวนอน */
-    @media (min-width: 800px)  {
+    @media (min-width: 800px) and (max-width: 1000px)  {
         .custom-tooltip {
             padding: 3px 8px; /* ลด Padding */
             font-size: 16px; /* ลดขนาดฟอนต์ */
@@ -429,7 +429,7 @@
             font-size: 18px;
         }
     }
-    @media (min-width: 800px)  {
+    @media (min-width: 800px) and (max-width: 1000px)  {
         .tooltip-label {
             top: -40px;
             left: 50%;
