--- a/360view.html
+++ b/360view.html
@@ -439,7 +439,10 @@
         }
 
         #videoOverlay {
-            width: 80%;
+            width: 70%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         #videoOverlay iframe {
