--- a/360view.html
+++ b/360view.html
@@ -440,15 +440,13 @@
 
         #videoOverlay {
             width: 70%;
-            display: flex;
-            justify-content: center;
+            top: 50%;
             align-items: center;
         }
 
         #videoOverlay iframe {
             width: 100%; /* ให้ใหญ่ขึ้นสำหรับมือถือ */
-            display: flex;
-            justify-content: center;
+            top: 50%;
             align-items: center;
         }
 
