--- a/360view.html
+++ b/360view.html
@@ -307,7 +307,7 @@
     }
 
     /* ปรับขนาดสำหรับหน้าจอขนาดเล็ก */
-    @media (min-width: 640px) and (max-width: 799px)  {
+    @media (max-width: 768px)  {
         .custom-tooltip {
             padding: 3px 8px; /* ลด Padding */
             font-size: 16px; /* ลดขนาดฟอนต์ */
@@ -321,7 +321,7 @@
     }
 
     /* ปรับขนาดสำหรับหน้าจอขนาดเล็กแนวนอน */
-    @media (min-width: 800px) and (max-width: 1080px)  {
+    @media (min-width: 800px) and (max-width: 1000px)  {
         .custom-tooltip {
             padding: 3px 8px; /* ลด Padding */
             font-size: 16px; /* ลดขนาดฟอนต์ */
@@ -334,7 +334,7 @@
         }
     }
 
-    @media (min-width: 640px) and (max-width: 799px)  {
+    @media (max-width: 768px)  {
         .tooltip-label {
             top: -40px;
             left: 50%;
@@ -393,13 +393,8 @@
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
 
-        .custom-hotspot img {
-            width: 24px;
-            height: 24px;
-        }
-
         .custom-hotspot span {
-            font-size: 16px;
+            font-size: 10px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
 
@@ -496,14 +491,9 @@
             padding: 8px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
-
-        .custom-hotspot img {
-            width: 24px;
-            height: 24px;
-        }
-
+        
         .custom-hotspot span {
-            font-size: 16px;
+            font-size: 10px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
 
