--- a/360view.html
+++ b/360view.html
@@ -345,10 +345,20 @@
 
         #videoOverlay {
             width: 80%;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            display: none; /* ซ่อน videoOverlay */
         }
 
         #videoOverlay iframe {
-            width: 100%; /* ให้ใหญ่ขึ้นสำหรับมือถือ */
+            width: 100%;
+            height: auto;
+            display: block;
         }
 
         #closeButton {
@@ -500,7 +510,7 @@
             padding: 20px;
             text-align: center;
             z-index: 9999;
-            width: 20%;
+            width: 30%;
             max-width: 768px;
         }
 
