--- a/360view.html
+++ b/360view.html
@@ -423,6 +423,8 @@
         }
 
         #closePopup {
+            width: 15px;
+            height: 15px;
             font-size: 16px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
@@ -532,6 +534,8 @@
         }
 
         #closePopup {
+            width: 15px;
+            height: 15px;
             font-size: 16px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
