--- a/360view.html
+++ b/360view.html
@@ -205,7 +205,7 @@
         border: 2px solid rgba(255, 0, 0, 0); /* Border instead of background */
         border-radius: 50%;
         font-size: 32px;
-        font-weight: bold;
+        font-weight: 500;
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -295,7 +295,7 @@
     #closeMenu {
         position: absolute;
         top: 10px;
-        right: 20px;
+        right: 10px;
         width: 30px;
         height: 30px;
         font-size: 25px;
@@ -418,14 +418,14 @@
         }
 
         .custom-hotspot span {
-            font-size: 10px;
+            font-size: 16px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
 
         #closePopup {
-            width: 15px;
-            height: 15px;
-            font-size: 16px;
+            width: 20px;
+            height: 20px;
+            font-size: 20px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
 
@@ -445,7 +445,7 @@
         }
 
         #closeMenu {
-            font-size: 19px;
+            font-size: 20px;
         }
     }
     @media (min-width: 800px) and (max-width: 1000px)  {
@@ -534,9 +534,9 @@
         }
 
         #closePopup {
-            width: 15px;
-            height: 15px;
-            font-size: 16px;
+            width: 20px;
+            height: 20px;
+            font-size: 20px;
             font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
         }
 
@@ -556,7 +556,7 @@
         }
 
         #closeMenu {
-            font-size: 16px;
+            font-size: 20px;
         }
     }
       </style>
