--- a/360view.html
+++ b/360view.html
@@ -423,11 +423,22 @@
         }
 
         #closePopup {
-            width: 20px;
-            height: 20px;
-            font-size: 20px;
-            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
-        }
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        height: 20px;
+        background-color: transparent; /* No background */
+        color: rgb(255, 255, 255);
+        border: 2px solid rgba(255, 0, 0, 0); /* Border instead of background */
+        border-radius: 50%;
+        font-size: 22px;
+        font-weight: 500;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
         #menuButton {
             width: 220px;
@@ -534,11 +545,22 @@
         }
 
         #closePopup {
-            width: 20px;
-            height: 20px;
-            font-size: 20px;
-            font-family: 'Kanit', sans-serif; /* กำหนดฟอนต์เป็น Kanit */
-        }
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        height: 20px;
+        background-color: transparent; /* No background */
+        color: rgb(255, 255, 255);
+        border: 2px solid rgba(255, 0, 0, 0); /* Border instead of background */
+        border-radius: 50%;
+        font-size: 22px;
+        font-weight: 500;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
         #menuButton {
             width: 220px;
