--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ev-1",
+                                      label: "ห้องเรียน EV",
                                       targetScene: "ev-1"
                                   }
                               },
@@ -866,7 +866,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "หน้าโรงรถ",
+                                      label: "EV Siamtech",
                                       targetScene: "B10-2"
                                   }
                               },
@@ -895,7 +895,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่2",
+                                      label: "ห้องเรียน EV จุดที่2",
                                       targetScene: "ev-2",
                                       yawTarget: 30 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -917,7 +917,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่3",
+                                      label: "ห้องเรียน EV จุดที่3",
                                       targetScene: "ev-3",
                                       yawTarget: -34 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -936,7 +936,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่3",
+                                      label: "ห้องเรียน EV จุดที่3",
                                       targetScene: "ev-3"
                                   }
                               },
@@ -946,7 +946,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่4",
+                                      label: "ห้องเรียน EV จุดที่4",
                                       targetScene: "ev-4"
                                   }
                               },
@@ -956,7 +956,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่1",
+                                      label: "ห้องเรียน EV จุดที่1",
                                       targetScene: "ev-1",
                                       yawTarget: 160 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -975,7 +975,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่4",
+                                      label: "ห้องเรียน EV จุดที่4",
                                       targetScene: "ev-4"
                                   }
                               },
@@ -985,7 +985,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่2",
+                                      label: "ห้องเรียน EV จุดที่2",
                                       targetScene: "ev-2",
                                       yawTarget: -5 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -996,7 +996,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่1",
+                                      label: "ห้องเรียน EV จุดที่1",
                                       targetScene: "ev-1",
                                       yawTarget: 160 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -1015,7 +1015,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่3",
+                                      label: "ห้องเรียน EV จุดที่3",
                                       targetScene: "ev-3",
                                       yawTarget: 80 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -1026,7 +1026,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "ห้อง ev จุดที่2",
+                                      label: "ห้องเรียน EV จุดที่2",
                                       targetScene: "ev-2",
                                       yawTarget: -65 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -1045,7 +1045,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "garage",
+                                      label: "EV Siamtech จุดที่1",
                                       targetScene: "car-1"
                                   }
                               },
@@ -1074,7 +1074,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "garage-2",
+                                      label: "EV Siamtech จุดที่2",
                                       targetScene: "car-2"
                                   }
                               },
@@ -1084,7 +1084,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "garage-3",
+                                      label: "EV Siamtech จุดที่3",
                                       targetScene: "car-3"
                                   }
                               },
@@ -1094,7 +1094,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "หน้าโรงรถ",
+                                      label: "EV Siamtech",
                                       targetScene: "B10-2",
                                       yawTarget: 173 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -1113,7 +1113,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "garage-1",
+                                      label: "EV Siamtech จุดที่1",
                                       targetScene: "car-1",
                                       yawTarget: 90 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -1132,7 +1132,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "garage-1",
+                                      label: "EV Siamtech จุดที่1",
                                       targetScene: "car-1",
                                       yawTarget: -140 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
@@ -1143,7 +1143,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "garage-4",
+                                      label: "EV Siamtech จุดที่4",
                                       targetScene: "car-4"
                                   }
                               },
@@ -1161,7 +1161,7 @@
                                   type: "custom",
                                   createTooltipFunc: hotspotWithLabel,
                                   createTooltipArgs: {
-                                      label: "garage-3",
+                                      label: "EV Siamtech จุดที่3",
                                       targetScene: "car-3",
                                       yawTarget: -145 // กำหนด yawTarget สำหรับการเปลี่ยน scene
                                   }
